# stepfg

./: .gitignore  LICENSE.md  README.md  part_geometry.json  pyproject.toml  stepfg.py
stepfg/: __init__.py  __main__.py  _builder.py  _geometry.py  _template.py
tests/: test_builder.py  test_cli.py  test_geometry.py
