[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "stepfg"
version = "1.0.1"
description = "Converts 2D polygon geometry into 3D STEP files via extrusion"
authors = [
    { name = "Eremey Valetov", email = "evv@msu.edu" },
]
license = "MIT"
requires-python = ">=3.6"
readme = "README.md"

[project.urls]
Repository = "https://github.com/evvaletov/stepfg"
